[project]
name = "ytt"
version = "0.1.0"
description = "YouTube transcript fetcher with search - get transcripts via Whisper AI or Innertube API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "andrewctf", email = "andrew@example.com" }
]
keywords = ["youtube", "transcript", "whisper", "caption", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ytt = "cli:cli"

[project.urls]
Homepage = "https://github.com/andrewctf/ytt"
Repository = "https://github.com/andrewctf/ytt"
Documentation = "https://github.com/andrewctf/ytt#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/cli.py",
    "/main.py",
    "/config.py",
    "/README.md",
    "/QUICKSTART.md",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
