[project]
name = "yttranscript-mcp"
version = "0.3.0"
description = "Fetch, clean, and search YouTube transcripts — captions-first (rate-limit resistant) with optional Whisper fallback and an MCP server"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AndrewCTF", email = "email.xryong@gmail.com" }
]
keywords = ["youtube", "transcript", "captions", "whisper", "search", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

# Core install is intentionally light: the captions path needs no audio/ML deps.
dependencies = [
    "requests>=2.31.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Local Whisper transcription fallback (downloads audio).
whisper = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
]
# Model Context Protocol server.
mcp = [
    "fastmcp>=2.0.0",
]
# GPU acceleration for Whisper.
torch = [
    "torch>=2.0.0",
]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ytt = "ytt.cli:cli"
yttranscript-mcp = "ytt.mcp.server:main"

[project.urls]
Homepage = "https://github.com/AndrewCTF/YTT"
Repository = "https://github.com/AndrewCTF/YTT"
Documentation = "https://github.com/AndrewCTF/YTT#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytt"]

[tool.hatch.build.targets.sdist]
include = [
    "/ytt",
    "/tests",
    "/README.md",
    "/QUICKSTART.md",
    "/llms.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
